<resources>
    <string name="app_name">Músicas</string>
    <string name="artista">Artista</string>
    <string name="album">Álbum</string>
    <string name="data">Data de inclusão</string>
    <string name="titulo">Título</string>
    <string name="titulodet">Título</string>
    <string name="artistadet">Artista</string>
    <string name="albumdet">Álbum</string>
    <string name="dataincdet">Data de inclusão</string>
    <string name="add">Criar</string>
    <string name="save">Salvar</string>
    <string name="albumtxt">Álbum</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="perfil">Perfil</string>
    <string name="preferencias">Preferências</string>
    <string name="dadosUsuario">Dados do usuario</string>
</resources>
