<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="173dp"
        android:layout_height="138dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription=""
        app:layout_constraintBottom_toTopOf="@+id/edDataIncDet"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edAlbumDet"
        app:layout_constraintVertical_bias="0.494"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edTituloDet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/titulodet"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edAlbumDet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/album"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edArtistaDet" />

    <EditText
        android:id="@+id/edArtistaDet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/artistadet"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTituloDet" />

    <TextView
        android:id="@+id/edDataIncDet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/dataincdet"
        android:textColorHint="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/dtPicker"
        android:layout_marginRight="8dp" />


    <ImageButton
        android:id="@+id/dtPicker"
        android:layout_width="59dp"
        android:layout_height="47dp"
        android:onClick="showDatePickerDialog"
        android:contentDescription=""
        app:srcCompat="@android:drawable/ic_menu_month"
        tools:ignore="ContentDescription,RtlHardcoded"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.583"
        tools:layout_editor_absoluteY="389dp"
        tools:layout_editor_absoluteX="309dp" />
</android.support.constraint.ConstraintLayout>